// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should be like snapshot when AppState is DetailsPage 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    appState="details page"
    goToSearchPage={null}
    items={Array []}
    selectedItem={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Header__HeaderWrapper>
          <Logo />
          <Details
            goToSearchPage={null}
            item={Object {}}
            overview=""
            poster_path=""
            release_date=""
            runtime={null}
            tagline=""
            title=""
            vote_average={0}
          />
        </Header__HeaderWrapper>,
        <InfoBar
          appState="details page"
          goToSearchPage={null}
          items={Array []}
          selectedItem={null}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Logo />,
            <Details
              goToSearchPage={null}
              item={Object {}}
              overview=""
              poster_path=""
              release_date=""
              runtime={null}
              tagline=""
              title=""
              vote_average={0}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "goToSearchPage": null,
              "item": Object {},
              "overview": "",
              "poster_path": "",
              "release_date": "",
              "runtime": null,
              "tagline": "",
              "title": "",
              "vote_average": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "appState": "details page",
          "goToSearchPage": null,
          "items": Array [],
          "selectedItem": null,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Header__HeaderWrapper>
            <Logo />
            <Details
              goToSearchPage={null}
              item={Object {}}
              overview=""
              poster_path=""
              release_date=""
              runtime={null}
              tagline=""
              title=""
              vote_average={0}
            />
          </Header__HeaderWrapper>,
          <InfoBar
            appState="details page"
            goToSearchPage={null}
            items={Array []}
            selectedItem={null}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Logo />,
              <Details
                goToSearchPage={null}
                item={Object {}}
                overview=""
                poster_path=""
                release_date=""
                runtime={null}
                tagline=""
                title=""
                vote_average={0}
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "goToSearchPage": null,
                "item": Object {},
                "overview": "",
                "poster_path": "",
                "release_date": "",
                "runtime": null,
                "tagline": "",
                "title": "",
                "vote_average": 0,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "appState": "details page",
            "goToSearchPage": null,
            "items": Array [],
            "selectedItem": null,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header should be like snapshot when AppState is SearchPage 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    appState="search page"
    goToSearchPage={null}
    items={Array []}
    selectedItem={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Header__HeaderWrapper>
          <Logo />
          <SearchField
            appState="search page"
            goToSearchPage={null}
            items={Array []}
            onSearch={null}
            selectedItem={null}
          />
        </Header__HeaderWrapper>,
        <InfoBar
          appState="search page"
          goToSearchPage={null}
          items={Array []}
          selectedItem={null}
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Logo />,
            <SearchField
              appState="search page"
              goToSearchPage={null}
              items={Array []}
              onSearch={null}
              selectedItem={null}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "appState": "search page",
              "goToSearchPage": null,
              "items": Array [],
              "onSearch": null,
              "selectedItem": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "appState": "search page",
          "goToSearchPage": null,
          "items": Array [],
          "selectedItem": null,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Header__HeaderWrapper>
            <Logo />
            <SearchField
              appState="search page"
              goToSearchPage={null}
              items={Array []}
              onSearch={null}
              selectedItem={null}
            />
          </Header__HeaderWrapper>,
          <InfoBar
            appState="search page"
            goToSearchPage={null}
            items={Array []}
            selectedItem={null}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Logo />,
              <SearchField
                appState="search page"
                goToSearchPage={null}
                items={Array []}
                onSearch={null}
                selectedItem={null}
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "appState": "search page",
                "goToSearchPage": null,
                "items": Array [],
                "onSearch": null,
                "selectedItem": null,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "appState": "search page",
            "goToSearchPage": null,
            "items": Array [],
            "selectedItem": null,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
